--- a/BeezNest/Views/Admin/UploadedProducts.cshtml
+++ b/BeezNest/Views/Admin/UploadedProducts.cshtml
@@ -8,7 +8,7 @@
         <div class="col-md-6 col-sm-12">
             <h2 class="text-primary">All Products</h2>
         </div>
-        <div class="col-md-6 col-sm-12 text-md-end text-sm-start mt-sm-2">
+        <div class="col-md-6 col-sm-12 text-md-end text-sm-end mt-sm-2">
             <a asp-controller="Admin" asp-action="CreateProduct" class="btn btn-primary">
                 <i class="fa-solid fa-plus"></i> &nbsp; Add New Products
             </a>
