--- a/BeezNest/Views/Admin/EditProduct.cshtml
+++ b/BeezNest/Views/Admin/EditProduct.cshtml
@@ -51,6 +51,14 @@
                         </div>
                     </div>
 
+                    <!-- Description Field -->
+                    <div class="mb-3 mt-3">
+                        <label class="col-md-4 col-form-label">Description</label>
+                        <div class="col-md-8">
+                            <textarea class="form-control w-100" asp-for="Description" rows="4" placeholder="Enter product description" required></textarea>
+                        </div>
+                    </div>
+
                     <div class="mb-3 mt-3">
                         <label class="col-md-4 col-form-label">Available Colors</label>
                         <div class="col-md-8">
