--- a/BeezNest/Views/Shared/_AdminLayout.cshtml
+++ b/BeezNest/Views/Shared/_AdminLayout.cshtml
@@ -195,7 +195,7 @@
 
 
 
-    <div class="sidebar">
+    <div class="sidebar show">
         <div class="offcanvas-header">
             <a asp-area="" asp-controller="Home" asp-action="Index">
                 <i class="fa-solid fa-house me-3"></i>Home
@@ -222,7 +222,10 @@
             </a>
             <a asp-area="" asp-controller="Orders" asp-action="ClientOrders" class="position-relative">
                 <i class="fa-sharp fa-solid fa-file-lines me-3"></i>Orders
-                <span id="orderCount" class="badge bg-danger position-absolute top-0 start-100 translate-middle">0</span>
+                <span id="orderCount" class="badge bg-danger position-absolute top-0 start-100 translate-middle"></span>
+            </a>
+            <a asp-area="" asp-controller="Questions" asp-action="CreateQuestions">
+                <i class="fa-brands fa-product-hunt me-3"></i>Add Q & S
             </a>
         </div>
     </div>
