--- a/BeezNest/Views/Shared/_Layout.cshtml
+++ b/BeezNest/Views/Shared/_Layout.cshtml
@@ -11,23 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">k rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link href="~/css/sweetalert2.css" rel="stylesheet" />
     <style>
-
-     /*    .footer-3 ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .footer-3 a {
-            text-decoration: none;
-            color: white;
-        }
-
-            .footer-3 a:hover {
-                text-decoration: underline;
-                color: #FFD700;
-            } */
-
         /* General Styles */
         .navbar {
             padding: 0.5rem 1rem;
@@ -73,6 +56,10 @@
         .carousel-control-prev-icon,
         .carousel-control-next-icon {
             filter: invert(80%);
+        }
+
+        .container{
+            max-width:1515px !important;
         }
 
     </style>
@@ -391,13 +378,19 @@
         </div>
     </div>
 
+    <div class="mt-3">
+        <div class="bg-dark">
+            <h2 class="text-center text-light">Hot Sales</h2>
+        </div>
+    </div>
+
 
     <div id="UserEmail" style="display:none;">
         @User?.Identity.Name
     </div>
 
     <div class="container">
-        <main role="main" class="pb-3" style="min-height:550px;  margin-top: 40px; background-color:#F6F6F6">
+        <main role="main" class="pb-3" style="min-height:550px;  margin-top: 25px; background-color:#F6F6F6">
             @RenderBody()
         </main>
     </div>
