FAQs and Rating

--- a/BeezNest/Views/Admin/UploadedProducts.cshtml
+++ b/BeezNest/Views/Admin/UploadedProducts.cshtml
@@ -115,7 +115,7 @@ else
                                 View Description
                             </button>
                         </td>
-                        <td>@product.NumberOfItem</td>
+                        <td class="text-center h3">@product.NumberOfItem</td>
                         <td>@product.DateSampled?.ToString("dd-MMM-yyyy")</td>
                         <td>
                             <div class="btn-group flex-wrap" role="group">
