--- a/BeezNest/Views/Questions/Index.cshtml
+++ b/BeezNest/Views/Questions/Index.cshtml
@@ -41,10 +41,10 @@
                         </div>
                     </div>
                     <div class="card-footer text-center">
-                        <a asp-controller="Admin" asp-route-id="@data.Id" asp-action="EditDropdown" class="btn btn-primary mx-2">
+                        <a asp-controller="Questions" asp-route-id="@data.Id" asp-action="EditQuestions" class="btn btn-primary mx-2">
                             <i class="fa-solid fa-pen-to-square"></i>
                         </a>
-                        <a asp-controller="Admin" asp-route-id="@data.Id" asp-action="DeleteDropdown" class="btn btn-danger mx-2">
+                        <a asp-controller="Questions" asp-route-id="@data.Id" asp-action="DeleteQuestions" class="btn btn-danger mx-2">
                             <i class="fa-solid fa-trash"></i>
                         </a>
                     </div>
