--- a/BeezNest/Views/Shared/_AdminLayout.cshtml
+++ b/BeezNest/Views/Shared/_AdminLayout.cshtml
@@ -225,7 +225,10 @@
                 <span id="orderCount" class="badge bg-danger position-absolute top-0 start-100 translate-middle"></span>
             </a>
             <a asp-area="" asp-controller="Questions" asp-action="CreateQuestions">
-                <i class="fa-brands fa-product-hunt me-3"></i>Add Q & S
+                <i class="fa-brands fa-product-hunt me-3"></i>Add Q & A
+            </a>
+            <a asp-area="" asp-controller="Questions" asp-action="Index">
+                <i class="fa-brands fa-product-hunt me-3"></i>Asked Q & A
             </a>
         </div>
     </div>
