--- a/BeezNest/Views/Admin/EditProduct.cshtml
+++ b/BeezNest/Views/Admin/EditProduct.cshtml
@@ -6,6 +6,7 @@
 <div class=" mt-5">
 
     <form method="post" asp-action="EditProduct" enctype="multipart/form-data">
+        <input asp-for="Id" hidden />
         <div class="centered-card mt-5">
             <div class="card">
                 <div class="card-body">
