--- a/BeezNest/Views/Questions/EditQuestions.cshtml
+++ b/BeezNest/Views/Questions/EditQuestions.cshtml
@@ -1,31 +1,32 @@
-﻿@model Core.Models.Dropdown
+﻿@model Core.Models.AskedQuestions
+
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<form method="post">
+<form method="post" asp-action="EditQuestions">
     <input asp-for="Id" hidden />
     <div class="border p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Edit Dropdowns</h2>
+            <h2 class="text-info pl-3">Edit Questions and Answers</h2>
         </div>
         <div class="row">
             <div class="col-8">
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="Key"></label>
+                        <label asp-for="Questions"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Key" class="form-control w-100" />
+                        <input asp-for="Questions" class="form-control w-100" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-4">
-                        <label asp-for="DropdownName"></label>
+                        <label asp-for="Answers"></label>
 
                     </div>
                     <div class="col-8 pt-2">
-                        <input asp-for="DropdownName" class="form-control w-100" />
+                        <textarea asp-for="Answers" class="form-control w-100"></textarea>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -46,5 +47,4 @@
             </div>
         </div>
     </div>
-
 </form>
