--- a/BeezNest/Views/Shared/_UserLayout.cshtml
+++ b/BeezNest/Views/Shared/_UserLayout.cshtml
@@ -223,40 +223,52 @@
                 </button>
 
                 <!-- Collapsible Navbar Content -->
+
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <ul class="navbar-nav ms-auto">
-                        <!-- Order History -->
-                        <li class="nav-item">
-                            <a class="nav-link d-flex align-items-center" asp-area="" asp-controller="Payment" asp-action="PaymentHistory">
-                                <i class="fa-solid fa-clock me-2"></i> Order History
-                            </a>
-                        </li>
-                        <!-- Authentication Links -->
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item">
-                                <span class="nav-link d-flex align-items-center">
-                                    <i class="fa-solid fa-user me-2"></i>
-                                    Welcome @User.Claims.FirstOrDefault(c => c.Type == "FirstName")?.Value &nbsp;
-                                    <a asp-controller="Account" asp-action="LogOut" class="ms-3 text-danger">LogOut</a>
-                                </span>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-chevron-down ms-2"></i>
+                                    @User.Claims.FirstOrDefault(c => c.Type == "FirstName")?.Value 
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+                                    <li>
+                                        <a class="dropdown-item d-flex align-items-center" asp-controller="Account" asp-action="Profile">
+                                            <i class="fa-solid fa-user me-2"></i> My Profile
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item d-flex align-items-center" asp-controller="Payment" asp-action="PaymentHistory">
+                                            <i class="fa-solid fa-clock me-2"></i> Order History
+                                        </a>
+                                    </li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li>
+                                        <a class="dropdown-item d-flex align-items-center text-danger" asp-controller="Account" asp-action="LogOut">
+                                            <i class="fa-solid fa-sign-out-alt me-2"></i> Logout
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center" asp-area="" asp-controller="Account" asp-action="Login">
+                                <a class="nav-link d-flex align-items-center" asp-controller="Account" asp-action="Login">
                                     <i class="fa-solid fa-sign-in-alt me-2"></i> Login
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link d-flex align-items-center" asp-area="" asp-controller="Account" asp-action="Registration">
+                                <a class="nav-link d-flex align-items-center" asp-controller="Account" asp-action="Registration">
                                     <i class="fa-solid fa-user-plus me-2"></i> Register
                                 </a>
                             </li>
                         }
                     </ul>
                 </div>
+
             </div>
 
             <!-- Search Bar (Mobile) -->
@@ -360,7 +372,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <a class="btn btn-dark text-center" asp-controller="Payment" asp-action="Index">Pay Now</a>
+                    @if (ViewBag.UserId != null)
+                    {
+                        <a class="btn btn-dark text-center" asp-controller="Payment" asp-action="Index" asp-route-id="@ViewBag.UserId">Pay Now</a>
+                    }
                         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
                     </div>
 
